<resources>
    <string name="app_name">Calculadora</string>
    <string name="btnNum1">1</string>
    <string name="btnNum2">2</string>
    <string name="btnNum3">3</string>
    <string name="btnNum4">4</string>
    <string name="btnNum5">5</string>
    <string name="btnNum6">6</string>
    <string name="btnNum7">7</string>
    <string name="btnNum8">8</string>
    <string name="btnNum9">9</string>
    <string name="btnNum0">0</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnMultiplicacion">X</string>
    <string name="btnDivision">÷</string>
    <string name="btnIgual">=</string>
    <string name="txtResultado">Resultado</string>
    <string name="btnReset">Reset</string>

</resources>