<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:gravity="end"
                android:hint="@string/txtResultado" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSiete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum7" />

            <Button
                android:id="@+id/btnOcho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum8" />

            <Button
                android:id="@+id/btnNueve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum9" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF5722"
                android:text="@string/btnSuma" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCuatro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum4" />

            <Button
                android:id="@+id/btnCinco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum5" />

            <Button
                android:id="@+id/btnSeis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum6" />

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#3F51B5"
                android:text="@string/btnResta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum3" />

            <Button
                android:id="@+id/btnDos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum2" />

            <Button
                android:id="@+id/btnUno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNum1" />

            <Button
                android:id="@+id/btnPor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFEB3B"
                android:text="@string/btnMultiplicacion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnCero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/btnNum0" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F44336"
                android:text="@string/btnIgual" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF0000"
                android:text="@string/btnReset" />

            <Button
                android:id="@+id/btnEntre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#2196F3"
                android:text="@string/btnDivision" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>